src/objects/Holding_Account__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Id__c</fullName>
        <label>Contact Owner Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Name__c</fullName>
        <label>Contact Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Holding Account</label>
</CustomObject>